--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "issue-tracker-client",
   "version": "0.1.0",
+  "homepage": "https://jorgeborras18.github.io/issue-tracker-client",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -20,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "set PORT=6969 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "react-router-dom": "^6.11.2"
   }
 }
