--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "issue-tracker-client",
   "version": "0.1.0",
-  "homepage": "https://jorgeborras18.github.io/issue-tracker-client",
+  "homepage": "https://monstruos-s-a.github.io",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
